--- a/frontend/mi-portfolio-react/package.json
+++ b/frontend/mi-portfolio-react/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
+    "d3": "^7.9.0",
     "framer-motion": "^11.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
+    "react-simple-maps": "^3.0.0",
     "react-toastify": "^10.0.6",
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^3.5.0"
