--- a/frontend/mi-portfolio-react/package.json
+++ b/frontend/mi-portfolio-react/package.json
@@ -12,18 +12,24 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
+    "@tsparticles/engine": "^3.5.0",
+    "@tsparticles/react": "^3.0.0",
     "axios": "^1.7.7",
     "d3": "^7.9.0",
     "framer-motion": "^11.11.10",
+    "leaflet": "^1.9.4",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
-    "react-simple-maps": "^3.0.0",
     "react-toastify": "^10.0.6",
     "react-tsparticles": "^2.12.2",
-    "tsparticles": "^3.5.0"
+    "tsparticles": "^3.5.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
