--- a/frontend/mi-portfolio-react/package.json
+++ b/frontend/mi-portfolio-react/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@reduxjs/toolkit": "^2.3.0",
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
@@ -18,6 +19,7 @@
     "d3": "^7.9.0",
     "framer-motion": "^11.11.10",
     "leaflet": "^1.9.4",
+    "leaflet.awesome-markers": "^2.0.5",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
