--- a/frontend/mi-portfolio-react/package.json
+++ b/frontend/mi-portfolio-react/package.json
@@ -11,12 +11,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^43.3.1",
+    "@ckeditor/ckeditor5-react": "^9.3.1",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@reduxjs/toolkit": "^2.3.0",
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
     "axios": "^1.7.7",
+    "cloudinary-core": "^2.13.1",
+    "cloudinary-react": "^1.8.1",
     "d3": "^7.9.0",
+    "firebase": "^11.0.2",
     "framer-motion": "^11.11.10",
     "leaflet": "^1.9.4",
     "leaflet.awesome-markers": "^2.0.5",
